# mldevops_exercise

./: .gitignore  .pre-commit-config.yaml  autoencoder.ipynb  autoencoder.py  pyproject.toml
